<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/space_screen"
    android:paddingEnd="@dimen/space_screen"
    android:paddingTop="@dimen/space_screen"
    android:background="@color/vin_bg"
    tools:context=".ui.collectors.CollectorsFragment">

    <TextView
        android:id="@+id/tvCollectorsTitle"
        style="@style/TextAppearance.Vinilos.ScreenTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_collectors"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pbCollectors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tvCollectorsTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvCollectorsEmpty"
        style="@style/TextAppearance.Vinilos.Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/space_l"
        android:text="@string/collectors_empty"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tvCollectorsTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCollectors"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_l"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/space_l"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tvCollectorsTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_collector" />

</androidx.constraintlayout.widget.ConstraintLayout>

