...
                android:background="@drawable/bg_header_overlay"
                app:layout_constraintTop_toTopOf="@id/albumCover"
                app:layout_constraintStart_toStartOf="@id/albumCover"
                app:layout_constraintEnd_toEndOf="@id/albumCover" />

            <TextView
                android:id="@+id/albumName"
                style="@style/TextAppearance.Vinilos.ScreenTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_screen"
                android:layout_marginEnd="@dimen/space_screen"
                android:layout_marginBottom="@dimen/space_s"
...
